                         CHANGES version 2.7

              This file summarizes changes made since 1.0

Version 2.7
-----------
* Internal optimizing changes and improvements
  Thanks to Bogdan Nicula for suggestions.
* Added support for Oracle. Thanks to Volodymyr Tarasenko,
  and Sergey Pavlov for implementating this.
Bug fixes:
* Reset Connection.in-transaction flag on Connection_clear
* SQLite: Ensure that the database file is specified in
  connection URL. Thanks to Bogdan Nicula.
* PostgreSQL: Implemented Connection_setQueryTimeout()

Version 2.6
-----------
* Internal optimizing changes and improvements
* Enable shared cache mode for SQLite >= 3.5
* Added new configure option --enable-sqliteunlock which
  enables SQLite unlock notification. This feature requires
  SQLite >= 3.6.12 compiled with the SQLITE_ENABLE_UNLOCK_NOTIFY
  C-preprocessor symbol. This option greately improves upon 
  SQLite concurrency when libzdb and SQLite is used from a 
  multi-threaded program.
* Removed deprecated ResultSet_readData() from API
Bug fixes:
* PostgreSQL: Unescape values retrieved via ResultSet_getBlob()
  and via ResultSet_getBlobByName(). By an incurie, unescape was
  left out of libzdb version 2.5.

Version 2.5
-----------
* Removed GPL license exceptions. The library is now licensed under
  the  GPL version 3 only. 
* Deprecated ResultSet_readData(). This function _was_ useful for 
  MySQL, but not for other drivers where it had some overhead.
* Added GCC __attribute__ printf checks where applicable
* PostgreSQL: Blob retrieval optimized
* PostgreSQL: Added unix-socket parameter to connection URL
* Internal optimizing changes and improvements

Version 2.4
-----------
* The options --with_mysql=<path> and --with_postgresql=<path> to
  configure has a new meaning; If <path> is given it is assumed to be
  the full path to respectively mysql_config and to pg_config. Example:
  ./configure --with_mysql=/usr/local/mysql/bin/mysql_config 